--- a/package.json
+++ b/package.json
@@ -3,21 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "clean": "rimraf .next out node_modules/.cache",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "export": "npm run build && next export",
+    "inspect": "NODE_OPTIONS='--inspect' next dev",
+    "analyze": "ANALYZE=true npm run build",
+    "format": "prettier --write 'src/**/*.{json,md,css,js,jsx,ts,tsx}'",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint --color --cache --cache-location 'node_modules/.cache/.eslintcache' src --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "npm run lint -- --fix",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "next": "13.1.1",
+    "next-seo": "^5.15.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.6"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/styled-components": "^5.1.26",
+    "babel-plugin-twin": "1.0.2",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
-    "next": "13.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
+    "rimraf": "^3.0.2",
+    "tailwindcss": "^3.2.4",
+    "twin.macro": "^3.1.0",
     "typescript": "4.9.4"
   }
 }
